--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 <body>
     
+    <div class="header">
+        <h1>Rock Paper Scissors</h1>
+        <p>by SRedford</p>
+    </div>
 
+    <div class="game_area">
+        <h3>Try your luck and make a selection below.  Best to five wins!</h3>
+            <div class="cardbox">
+                <div class="cards"><button class="rock_btn">Rock</button></div>
+                <div class="cards"><button class="paper_btn">Paper</button></div>
+                <div class="cards"><button class="scissor_btn">Scissors</button></div>
+            </div>
+    </div>
+
+    <div class="footer">
+        <P>footer</P>
+    </div>
     
 </body>
 </html>
