Added new game info area.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     </div>
 
     <div class="game_area">
-        <h3>Try your luck and make a selection below.  Best to five wins!</h3>
+        <h2>Try your luck and make a selection below.  Best to five wins!</h2>
             <div class="cardbox">
                 <div class="cards"><button class="rock_btn">Rock</button></div>
                 <div class="cards"><button class="paper_btn">Paper</button></div>
                 <div class="cards"><button class="scissor_btn">Scissors</button></div>
+            </div>
+            <div class="gameinfo">
+                <div></div>
+                <div></div>
             </div>
     </div>
 
