made html layout and css adjustments

--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
     
     <div class="header">
         <h1>Rock Paper Scissors</h1>
-        <p>by SRedford</p>
+        <h3>Do you have what it takes?</h3>
     </div>
 
     <div class="game_area">
-        <h2>Try your luck and make a selection below.  Best to five wins!</h2>
+        <h2>Try your luck, and make a selection below.  Best to five wins!</h2>
             <div class="cardbox">
                 <div class="cards"><button class="rock_btn">Rock</button></div>
                 <div class="cards"><button class="paper_btn">Paper</button></div>
                 <div class="cards"><button class="scissor_btn">Scissors</button></div>
             </div>
             <div class="gameinfo">
-                <div></div>
-                <div></div>
+                <div><h3 class="score">Player Count:</h3><input id="playercount"></div>
+                <div><h3 class="score">Computer Count:</h3><input id="computercount"></div>
+            </div>
+            <div>
+                <h2 id="whowins"></h2>
             </div>
     </div>
 
     <div class="footer">
-        <P>footer</P>
+        <P>Made by SRedford via The Odin Project 2023</P>
     </div>
     
 </body>
